# ImGUI_DX11_Template_Aug2025

./: .gitignore  BGBaseApp.h  CMakeLists.txt  README.md  TemplateApp.cpp  TemplateApp.h
App/: AppOptions.cpp  ImGuiAPP.cpp  ImGuiAPP.h  TemplateApp.cpp  TemplateApp.h  about.cpp  help.cpp
AppBase/: AboutBase.cpp  AppIni.cpp  AppIni.h  AppLogger.cpp  AppLogger.h  AppOptionsBase.cpp  BGMainSupport.cpp  BGUtil.cpp  BGUtil.h  ImBGUtil.cpp  ImBGUtil.h  ImGuiAPP.h  ImGuiNotify.hpp
AppBase/Fonts/: Fonts.h
AppSub/: AboutSub.cpp  AppOptionsSub.cpp  GAMS2App.cpp  GAMS2App.h  TemplateApp.cpp  TemplateApp.h  TemplateBaseNetworking.cpp  help.cpp  help.h
LoadFile/: LoadFile.cpp  LoadFile.h
PlatformJ/: FOMSupport.cpp  FOMSupport.h  PlatformJ_UI.cpp  Platform_J.cpp  Platform_J.h
SQLBase/: SQL_Common.cpp  SQL_Common.h
common/: AppIni.cpp  AppIni.h  BGUtil.cpp  BGUtil.h  ImBGUtil.cpp  ImBGUtil.h
hasMain/: BGMainSupport.cpp  BGMainSupport.h  Resource.rc  hasMainImGuiDX11.cpp  resource.aps  resource.h
image/: ImageDX.cpp  ImageDX.h
runFolder/: GAMS_APP_Ini.db  ImBG_APP_Ini.db  LFE.ewriter  MultiMaps_APP_Ini.db  _ImBG_APP_Ini.db  cc150_1.PF  cc150_42 - Copy.PF  cc150_42.PF  imgui.ini  output_text.txt
socketStuff/: BG_SocketBase.cpp  BG_SocketBase.h  MulticastSocket.cpp  MulticastSocket.h  bg_MulticastSocket.cpp  bg_MulticastSocket.h  bg_TCPSocket.cpp  bg_TCPSocket.h  bg_UDPSocket.h
